# tempo-grpc

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  release.yml
crates/indexer/: Cargo.toml
crates/indexer/schema/: schema.sql
crates/indexer/src/: error.rs  main.rs  models.rs  pipeline.rs  writer.rs
crates/indexer/src/models/: block.rs  error.rs  log.rs  mod.rs  transaction.rs
crates/node/: Cargo.toml
crates/node/src/: exex.rs  main.rs  server.rs
crates/node/src/notifications/: chain.rs
crates/node/src/streaming/: backfill.rs  error.rs  live.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/proto/: exex.proto
crates/shared/src/: error.rs  lib.rs  test_utils.rs
crates/shared/src/codec/: block.rs  exex.rs  mod.rs  transaction.rs
proto/: exex.proto
src/: convert.rs  defaults.rs  exex.rs  main.rs  server.rs
src/codec/: block.rs  exex.rs
