[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = "1.50.0"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tonic = { version = "0.14.5", features = ["tls-ring", "tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
async-channel = "2.5.0"
eyre = "0.6"
thiserror = "2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clickhouse = { version = "0.14", features = ["inserter", "lz4", "native-tls"] }
alloy-primitives = { version = "1.5.4", default-features = false }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo.git", tag = "v1.4.0" }
clap = { version = "4.5.57", features = ["derive", "env"] }

[dev-dependencies]
shared = { path = "../shared", features = ["test-utils"] }
rand = "0.10.0"
