[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic = { workspace = true, features = ["tls-ring", "tls-webpki-roots", "zstd"] }
tracing.workspace = true
tracing-subscriber.workspace = true
async-channel.workspace = true
eyre.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clickhouse.workspace = true
alloy-primitives.workspace = true
tempo-primitives.workspace = true
clap.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
shared = { workspace = true, features = ["test-utils"] }
rand.workspace = true
