[package]
name = "tempo-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
reth.workspace = true
reth-ethereum.workspace = true
reth-cli-util.workspace = true
reth-ethereum-cli.workspace = true
reth-exex.workspace = true
reth-rpc-server-types.workspace = true
reth-tracing.workspace = true
tempo-node.workspace = true
tempo-chainspec.workspace = true
tempo-consensus.workspace = true
tempo-evm.workspace = true
tempo-eyre.workspace = true
tempo-primitives.workspace = true

clap.workspace = true
thiserror.workspace = true
eyre.workspace = true
futures-util.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic = { workspace = true, features = ["zstd"] }
tonic-reflection.workspace = true
tracing.workspace = true

shared.workspace = true

[features]
default = ["asm-keccak", "jemalloc", "otlp"]

asm-keccak = [
	"tempo-node/asm-keccak",
	"reth-ethereum-cli/asm-keccak",
]

jemalloc = [
	"reth-cli-util/jemalloc",
	"reth-ethereum-cli/jemalloc",
	"reth-ethereum/jemalloc",
	"tempo-node/jemalloc",
]

otlp = [
	"reth-ethereum-cli/otlp",
	"reth-ethereum-cli/otlp-logs",
	"reth-ethereum/otlp",
	"tempo-node/otlp",
]
