[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[features]
test-utils = []

[dependencies]
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
reth.workspace = true
reth-ethereum.workspace = true
reth-exex.workspace = true
tempo-primitives.workspace = true

thiserror.workspace = true
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
rand.workspace = true
